--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,71 @@
+/* INSPO - https://www.behance.net/gallery/58941485/Worker-studio-task-tracker-%28desktop%29?tracking_source=search_projects_appreciations%7Csimple+tracker */
+
+html {
+  font-size: 62.5%;
+}
+
+table {
+  border: 1px solid;
+  width: 100%;
+}
+
+table td,
+table th {
+  text-align: left;
+  padding: 1rem;
+}
+
+table th {
+  background-color: azure;
+}
+
 .App {
-  text-align: center;
+  width: 60rem;
+  margin: 0 auto;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-new-bug-form {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  background-color: azure;
+  padding: 1rem;
+  border: 1px solid black;
+  margin-top: 2rem;
+}
+
+.add-new-bug-form * {
+  margin: 0.5rem 0;
+}
+
+.add-new-bug-form input,
+.add-new-bug-form select {
+  padding: 1rem;
+}
+
+.add-new-bug-form button {
+  background-color: cadetblue;
+  border: 0;
+  padding: 1rem;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+
+html {
+  background-color: #22242a;
+  font-family: Roboto, sans-serif;
+  font-size: 62.5%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
 }
+
+.main {
+  max-width: 96rem;
+  width: 100%;
+} */
