--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 /* INSPO - https://www.behance.net/gallery/58941485/Worker-studio-task-tracker-%28desktop%29?tracking_source=search_projects_appreciations%7Csimple+tracker */
 
-html {
+/* html {
   font-size: 62.5%;
 }
 
@@ -48,14 +48,64 @@ table th {
   border: 0;
   padding: 1rem;
   color: white;
-}
+} */
 
-/* @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Darker+Grotesque&family=Lato&family=Roboto:wght@400;700&family=Secular+One&display=swap");
+
+:root {
+  /* LINEAR GRADIENT */
+  --first-gradient-colour: #b4ec51;
+  --second-gradient-color: #1a91eb;
+  --linear-gradient: linear-gradient(
+    to right,
+    var(--first-gradient-colour),
+    var(--second-gradient-color)
+  );
+  --selected-linear-gradient: linear-gradient(
+    to right,
+    var(--second-gradient-color),
+    var(--first-gradient-colour)
+  );
+
+  /* BUTTON STYLES */
+  --button-border-radius: 5rem;
+  --wrapper-padding: -0.5rem;
+
+  /* FONT-STYLES */
+  --header-color: #fff;
+  --light-font-color: #888;
+
+  /* TABLE STYLES */
+  --table-row-colour: #2d3033;
+  --table-border-radius: 0.5rem;
+}
 
 html {
   background-color: #22242a;
-  font-family: Roboto, sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: 62.5%;
+  scroll-behavior: smooth;
+  overflow: scroll;
+}
+
+body {
+  margin: 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--header-color);
+  font-family: "Secular One", sans-serif;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 1.6rem;
 }
 
 .App {
@@ -63,9 +113,11 @@ html {
   flex-direction: column;
   align-items: center;
   width: 100%;
+  justify-content: space-between;
 }
 
 .main {
-  max-width: 96rem;
+  max-width: 95rem;
   width: 100%;
-} */
+  margin-bottom: 10rem;
+}
