--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,29 +1,30 @@
-:root {
-  --linear-gradient: linear-gradient(to right, #b4ec51, #1a91eb);
-  --button-border-radius: 5rem;
-}
-
 .btn {
-  background-image: var(--linear-gradient);
   border: none;
   border-radius: var(--button-border-radius);
   color: #fff;
   cursor: pointer;
   font-family: inherit;
   font-weight: 400;
-  padding: 1rem 3.5rem;
-  text-transform: uppercase;
-  transition: all 1s ease-in;
   letter-spacing: 0.1rem;
+  padding: 1rem 3.5rem;
   text-decoration: none;
+  text-transform: uppercase;
+  transition: all 0.2s ease-in-out;
+  font-size: 1rem;
 }
 
-.btn:hover {
+.btn--primary:hover {
   transform: scale(1.05); /* not working */
+  bottom: var(--wrapper-padding);
+  top: var(--wrapper-padding);
 }
 
-.btn::before {
-  --wrapper-padding: -0.5rem;
+.btn--primary {
+  background-image: var(--linear-gradient);
+}
+
+.btn--primary::before,
+.btn--secondary:hover::before {
   background: var(--linear-gradient);
 
   border-radius: var(--button-border-radius);
@@ -32,14 +33,57 @@
   content: "";
   filter: blur(0.5rem);
   left: var(--wrapper-padding);
-  opacity: 0.2;
+  opacity: 0.3;
   position: absolute;
   right: var(--wrapper-padding);
   top: var(--wrapper-padding);
   z-index: -1;
 }
 
-.btn-wrapper {
-  position: relative;
-  z-index: -2;
+/* .btn--primary::before {
+  top: 0.5rem;
+  bottom: 0.5rem;
+} */
+
+.btn--secondary {
+  border-radius: 100rem;
+  padding: 1rem;
+  padding: 1rem 3.5rem;
+  border: solid 1px transparent;
+  background-image: var(--linear-gradient), var(--linear-gradient);
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  box-shadow: 2px 1000px 1px var(--table-row-colour) inset;
 }
+
+.btn--secondary:hover {
+  transform: translate(0rem, -0.2rem);
+  box-shadow: none;
+}
+
+/* .btn--secondary::before {
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: absolute;
+  margin: -3px;
+  border-radius: inherit;
+  background-image: var(--linear-gradient);
+  z-index: -2;
+} */
+
+.btn-wrapper {
+  padding: 1rem 0;
+  position: relative;
+  z-index: 0;
+}
+
+.btn--danger {
+  background-color: var(--table-row-colour);
+  margin-left: 1rem;
+  border: 1px solid red;
+}
+
+/* TODO add gradient border to danger button */
