--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -9,4 +9,26 @@
 .nav__logo {
   height: 5rem;
   filter: grayscale(100%) brightness(2);
+  margin: 2rem 0;
+}
+
+.nav__logo-container {
+  display: flex;
+  align-items: center;
+  color: var(--header-color);
+  font-size: 2.5rem;
+  font-family: "Secular One", "Roboto", sans-serif;
+  text-transform: uppercase;
+}
+
+.nav__progress-bar-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.nav__progress-description {
+  color: var(--light-font-color);
+  font-size: 1.3rem;
 }
