--- a/src/components/Button.css
+++ b/src/components/Button.css
@@ -1,6 +1,7 @@
 .btn {
   border: none;
-  border-radius: var(--button-border-radius);
+  /* border-radius: var(--button-border-radius); */
+  border-radius: 100rem;
   color: #fff;
   cursor: pointer;
   font-family: inherit;
@@ -9,14 +10,8 @@
   padding: 1rem 3.5rem;
   text-decoration: none;
   text-transform: uppercase;
-  transition: all 0.2s ease-in-out;
-  font-size: 1rem;
-}
-
-.btn--primary:hover {
-  transform: scale(1.05); /* not working */
-  bottom: var(--wrapper-padding);
-  top: var(--wrapper-padding);
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+  font-size: 1.1rem; /* was 1.4rem */
 }
 
 .btn--primary {
@@ -25,11 +20,21 @@
 
 .btn--primary::before,
 .btn--secondary:hover::before {
-  background: var(--linear-gradient);
+  background-image: var(--linear-gradient);
+}
 
-  border-radius: var(--button-border-radius);
+.btn--danger:hover::before {
+  background-image: var(--danger-linear-gradient);
+}
+
+.btn--primary::before,
+.btn--secondary:hover::before,
+.btn--danger:hover::before {
+  /* background: var(--linear-gradient); */
+
+  /* border-radius: var(--button-border-radius); */
+  border-radius: inherit;
   bottom: var(--wrapper-padding);
-
   content: "";
   filter: blur(0.5rem);
   left: var(--wrapper-padding);
@@ -40,26 +45,70 @@
   z-index: -1;
 }
 
+.btn-wrapper {
+  padding: 1rem 0;
+  position: relative;
+  z-index: 0;
+  /* margin: 1rem 0; */
+}
+
+.btn--secondary {
+  background-image: var(--linear-gradient), var(--linear-gradient);
+  box-shadow: 2px 1000px 1px var(--table-row-colour) inset;
+}
+
+.btn--danger {
+  background-image: var(--danger-linear-gradient);
+  box-shadow: 2px 1000px 1px var(--table-row-colour) inset;
+}
+
+.btn--secondary,
+.btn--danger {
+  /* border-radius: 100rem; */
+  /* padding: 1rem; */
+  /* padding: 1rem 3.5rem; */
+  border: solid 1px transparent;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  margin: 0 0.5rem;
+}
+
+.btn--primary:hover,
+.btn--secondary:hover,
+.btn--danger:hover {
+  transform: translate(0rem, -0.2rem);
+  box-shadow: none;
+}
+.btn--primary:active,
+.btn--secondary:active,
+.btn--danger:active {
+  transform: translate(0rem, -0.1rem);
+  box-shadow: none;
+}
+
 /* .btn--primary::before {
   top: 0.5rem;
   bottom: 0.5rem;
 } */
 
-.btn--secondary {
-  border-radius: 100rem;
-  padding: 1rem;
-  padding: 1rem 3.5rem;
-  border: solid 1px transparent;
+/* .btn--primary:hover {
+  transform: scale(1.05);
+  bottom: var(--wrapper-padding);
+  top: var(--wrapper-padding);
+} */
+
+/* .btn--primary:hover {
+  box-shadow: 2px 1000px 1px var(--table-row-colour) inset;
+  border: 1px solid transparent;
   background-image: var(--linear-gradient), var(--linear-gradient);
+  border: solid 1px transparent;
   background-origin: border-box;
   background-clip: content-box, border-box;
-  box-shadow: 2px 1000px 1px var(--table-row-colour) inset;
-}
+} */
 
-.btn--secondary:hover {
-  transform: translate(0rem, -0.2rem);
-  box-shadow: none;
-}
+/* .btn--primary:hover::before {
+  filter: blur(50rem);
+} */
 
 /* .btn--secondary::before {
   content: "";
@@ -74,16 +123,8 @@
   z-index: -2;
 } */
 
-.btn-wrapper {
-  padding: 1rem 0;
-  position: relative;
-  z-index: 0;
-}
-
-.btn--danger {
+/* .btn--danger {
   background-color: var(--table-row-colour);
   margin-left: 1rem;
   border: 1px solid red;
-}
-
-/* TODO add gradient border to danger button */
+} */
