--- a/src/components/Navigation.css
+++ b/src/components/Navigation.css
@@ -6,6 +6,26 @@
   position: relative;
 }
 
+.nav__app-name {
+  margin-left: 1rem;
+}
+
+.nav__link {
+  color: var(--header-color);
+  text-transform: uppercase;
+  margin-right: 2rem;
+  font-size: 1.1rem;
+  text-decoration: none;
+  font-family: "Lato";
+  letter-spacing: 0.1rem;
+
+  transition: color 0.2s ease-in-out;
+}
+
+.nav__link:hover {
+  color: var(--first-gradient-colour);
+}
+
 .nav__logo {
   height: 5rem;
   filter: grayscale(100%) brightness(2);
@@ -16,7 +36,7 @@
   display: flex;
   align-items: center;
   color: var(--header-color);
-  font-size: 2.5rem;
+  font-size: 3rem;
   font-family: "Secular One", "Roboto", sans-serif;
   text-transform: uppercase;
 }
@@ -30,5 +50,5 @@
 
 .nav__progress-description {
   color: var(--light-font-color);
-  font-size: 1.3rem;
+  font-size: 1.6rem;
 }
