--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -8,7 +8,7 @@
   letter-spacing: 0.1rem;
   text-transform: uppercase;
   width: 100%;
-  margin-top: 5rem;
+  /* margin-top: 5rem; */
 
   /* position: sticky;
   bottom: 0; */
