--- a/src/components/LogInForm/LogInForm.module.css
+++ b/src/components/LogInForm/LogInForm.module.css
@@ -3,6 +3,7 @@
   font-family: "Secular One", sans-serif;
   font-size: 3.5rem;
   margin-bottom: 3rem;
+  text-align: center;
   text-transform: uppercase;
 }
 
@@ -59,4 +60,12 @@
   flex-direction: column;
   flex-wrap: nowrap;
   justify-content: center;
+}
+
+@media (max-width: 400px) {
+  .explanation,
+  .input {
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
 }
