--- a/src/globals.css
+++ b/src/globals.css
@@ -74,6 +74,15 @@
   width: 100%;
 }
 
+.app--root {
+  background: linear-gradient(
+      100deg,
+      rgba(34, 36, 42, 1) 50%,
+      rgba(34, 36, 42, 0) calc(50% + 1px)
+    ),
+    url(../public/img/leaf-background.jpeg);
+}
+
 .heading {
   align-items: center;
   color: var(--font-colour-1);
@@ -108,6 +117,16 @@ html {
   min-height: calc(100vh - 7.5rem);
   width: 100%;
   padding: 2rem;
+}
+
+@media (max-width: 1200px) {
+  .app--root {
+    background: linear-gradient(
+      100deg,
+      rgba(34, 36, 42, 1),
+      rgba(34, 36, 42, 1)
+    );
+  }
 }
 
 @media (max-width: 600px) {
