--- a/src/routes/Root.module.css
+++ b/src/routes/Root.module.css
@@ -3,13 +3,13 @@
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  justify-content: space-evenly;
+  justify-content: space-between;
   width: 100%;
 }
 
 .img {
   /* filter: grayscale(100%) brightness(2); */
-  filter: hue-rotate(200deg) drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+  filter: /*hue-rotate(200deg)*/ drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
   max-height: 50vh;
   animation: moveBug 10s ease-in-out infinite forwards;
 }
@@ -26,6 +26,10 @@
 }
 
 @media (max-width: 1200px) {
+  .flexcontainer {
+    justify-content: center;
+  }
+
   .img {
     display: none;
   }
