Change ladybird colour and add leaf background to home page

--- a/src/routes/Root.module.css
+++ b/src/routes/Root.module.css
@@ -8,8 +8,7 @@
 }
 
 .img {
-  /* filter: grayscale(100%) brightness(2); */
-  filter: /*hue-rotate(200deg)*/ drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
+  filter: drop-shadow(0px 0px 5px rgba(0, 0, 0, 0.5));
   max-height: 50vh;
   animation: moveBug 10s ease-in-out infinite forwards;
 }
